<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    
    <string name="image_description"></string>
    
    <string name="label_list_empty">Empty List</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_product_category">Category</string>
    <string name="label_product_name">Name</string>
    <string name="label_product_picture">Picture</string>
    <string name="label_error">Error</string>
    <string name="label_select_picture_source">Select picture source</string>
    <string name="label_source_galery">Galery</string>
    <string name="label_source_camera">Camera</string>
    <string name="label_share_cart">Share list with</string>
    <string name="label_already_in_cart">Already in cart</string>
    <string name="label_initializing_database">Initializing database&#8230;</string>
    
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit">Edit</string>
    <string name="button_remove">Remove</string>
    <string name="button_create">Create</string>
    
    <string name="icon_add">\u002B</string>
    <string name="icon_dropdown">\uE259</string>
    <string name="icon_remove">\uE020</string>
    <string name="icon_edit">\uE065</string>
    <string name="icon_update">\uE013</string>
    <string name="icon_menu">\uE012</string>
    <string name="icon_share">\uE066</string>
    <string name="icon_camera">\uE046</string>
    <string name="icon_galery">\uE060</string>
    
    <string name="toolbar_title_main">Shopping List</string>
    <string name="toolbar_title_add_product">Add product</string>
    <string name="toolbar_title_create_product">Create product</string>
    <string name="toolbar_title_edit_product">Edit product</string>
    <string name="toolbar_title_manage_categories">Manage categories</string>
    
    <string name="confirmation_remove_product">Do you want to remove the product?</string>
    <string name="confirmation_remove_category">Do you want to remove the category?</string>
    
    <string name="error_invalid_category">Invalid category</string>
    <string name="error_invalid_name">Invalid name</string>
    <string name="error_invalid_image">Invalid image</string>
    <string name="error_product_already_exists">Product already exists</string>
    <string name="error_category_already_exists">Category already exists</string>
    <string name="error_cart_empty">The list is empty</string>
    <string name="error_category_in_use">The category is linked to one or more products.</string>
    <string name="error_product_in_use">The product is linked to one or more cart items.</string>

</resources>