<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.mauriciotogneri.shoppingcart"
    style="@style/Screen" >
    
    <LinearLayout style="@style/Toolbar" >

        <com.mauriciotogneri.shoppingcart.widgets.CustomTextView
            style="@style/ToolbarTitle"
            android:text="@string/toolbar_title_add_product" />

        <View style="@style/HorizontalSeparator" />

        <com.mauriciotogneri.shoppingcart.widgets.CustomTextView
            style="@style/ToolbarButton"
            android:id="@+id/create_product"
            android:text="@string/icon_add" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="#FFFFFF">
        
        <com.mauriciotogneri.shoppingcart.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_product_category"
            android:textColor="@color/default_text_color"
            android:textSize="@dimen/default_font_size"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="#FFFFFF"
            custom:font="opensans" />

        <View
	        android:layout_width="0.5dp"
	        android:layout_height="match_parent"
	        android:background="@color/boder_color" />
        
        <Spinner
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF" />
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/boder_color" />
    
    <ListView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background_color" />

    <com.mauriciotogneri.shoppingcart.widgets.CustomTextView
        android:id="@+id/empty_label"
        style="@style/LabelEmptyList" />

</LinearLayout>